# antigravity-kit

.agent/tasks/: zero-tauri-app.md
docs/: PLAN-ai-learning.md
zero-air/: crop.py  crop2.py  crop3.py  crop4.py  debug_crop.py  make_icon.py  make_mac_icon.py  make_public_icon.py  package-lock.json  package.json
zero-air/src-tauri/: Cargo.toml  tauri.conf.json
zero-air/src-tauri/icons/: icon.icns
zero-air/src-tauri/src/: ai.rs  ai_triage.rs  db.rs  imap.rs  imap_idle.rs  lib.rs  smtp.rs
zero-air/src/app/: globals.css  layout.tsx  page.tsx
