[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-imap = "0.9.5"
async-native-tls = "0.5.0"
mailparse = "0.15"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
window-vibrancy = "0.5"
imap = "2.4.1"
native-tls = "0.2.13"
reqwest = { version = "0.13.2", features = ["json"] }
mime_guess = "2.0.5"
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
